--- a/Whack-A-Mole/finalproject.html
+++ b/Whack-A-Mole/finalproject.html
@@ -29,7 +29,7 @@
        
    
     </div>
-    <div id='start'></div>
+    <div id='start'>start</div>
     <div id='score'>
         <div id='score-number'>
     </div>
