--- a/Whack-A-Mole/finalproject.html
+++ b/Whack-A-Mole/finalproject.html
@@ -30,9 +30,8 @@
    
     </div>
     <div id='start'>start</div>
-    <div id='score'>
-        <div id='score-number'>
-    </div>
+    <div id='score'> </div>
+    <div id='slideUp'>slideUp</div>
 </body>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.20.3/TweenMax.min.js"></script>
 <script src='finalproject.js'></script>
