--- a/Whack-A-Mole/finalproject.html
+++ b/Whack-A-Mole/finalproject.html
@@ -9,40 +9,39 @@
 <body>
     <div class='machine'>
         <div class='hole1 hole'>
-            <div class='mole mole1'></div>
+            <div class='mole mole1' mole='1'></div>
             <div class='holeFront1 holeFront'></div>
         </div>
         <div class='hole2 hole'>
-            <div class='mole mole2'></div>
+            <div class='mole mole2' mole='2'></div>
             <div class='holeFront2 holeFront'></div>
         </div>
         <div class='hole3 hole'>
-            <div class='mole mole3'></div>
+            <div class='mole mole3' mole='3'></div>
             <div class='holeFront3 holeFront'></div>
         </div>
         <div class='hole4 hole'>
-            <div class='mole mole4'></div>
+            <div class='mole mole4' mole='4'></div>
             <div class='holeFront4 holeFront'></div>
         </div>
         <div class='hole5 hole'>
-            <div class='mole mole5'></div>
+            <div class='mole mole5' mole="5"></div>
             <div class='holeFront5 holeFront'></div>
         </div>
         <div class='hole6 hole'>
-            <div class='mole mole6'></div>
+            <div class='mole mole6' mole='6'></div>
             <div class='holeFront6 holeFront'></div>
         </div>
         <div class='hole7 hole'>
-            <div class='mole mole7'></div>
+            <div class='mole mole7' mole='7'></div>
             <div class='holeFront7 holeFront'></div>
         </div>
         <div class='hole8 hole'>
-            <div class='mole mole8'></div>
+            <div class='mole mole8' mole='8'></div>
             <div class='holeFront8 holeFront'></div>
         </div>
         <div class='titleBar'>
-            <a href="#start">start</a>
-            <a href="#slideUp">slideUp</a>
+            <div id='start'>Start</div>
             <div id='display'>Moles Whacked</div>
             <div id='score'>0</div>
         </div>
@@ -52,4 +51,4 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.20.3/TweenMax.min.js"></script>
 <script src='finalproject.js'></script>
 </html>
-
+<!--<div id='slideUp'>slideUp</div>-->
